Fix iOS Safari form display issues, and iOS Chrome menu issue. Also add blur effect to mobile menu, currently only supported on iOS.

--- a/less/master.less
+++ b/less/master.less
@@ -155,7 +155,7 @@ header {
         }
     }
     
-    #menu-check:checked ~ .menubutton {
+    .menu.showing + .menubutton {
         left: ~"calc(" @menu-width-mobile ~" + 5px)";
         
         span {
@@ -213,7 +213,8 @@ div.menu {
         z-index: 2;
         top: 0;
         left: -100%;
-        background: rgba(255, 255, 255, 0.98);
+        background: rgba(255, 255, 255, 0.8);
+		backdrop-filter: blur(10px);
         border-right: 1px solid @muted-gray;
         margin-top: 0;
         height: 100%;
@@ -233,9 +234,13 @@ div.menu {
                 margin-bottom: 2rem;
             }
         }
+		
+		&.nofilter {
+			background: rgba(255, 255, 255, 0.98);
+		}
     }
     
-    #menu-check:checked ~ div.menu {
+    div.menu.showing {
         left: 0;
     }
 }
@@ -441,6 +446,7 @@ article {
         padding: 0.5rem 0.5rem 0.5rem 0.5rem;
         font-family: @body-fonts;
         transition: all 0.2s ease;
+		appearance: none; // Needed for iOS
         
         &:focus {
             outline: none;
